SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=544512

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -28,6 +28,7 @@ GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラ
 GenericName[nb]=UML-modelleringsprogram
+GenericName[nds]=UML-Modellmaker
 GenericName[nl]=UML-modeller
 GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
