--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -26,6 +26,7 @@ Comment[is]=Umbrello UML Modeller Skrá
 Comment[it]=File del modellatore UML Umbrello
 Comment[ja]=Umbrello UML モデラファイル
 Comment[nb]=Umbrello UML-modelleringsfil
+Comment[nds]=UML-Modellmaker-Datei vun Umbrello
 Comment[nl]=Umbrello UML Modeller-bestand
 Comment[pl]=Plik modelera UML Umbrello
 Comment[pt]=Ficheiro do Modelador de UML Umbrello
