Generate version.h file
svn path=/trunk/KDE/kdesdk/umbrello/; revision=549324

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -1,4 +1,14 @@
 
+macro(CREATE_VERSION _in_FILE _out_FILE)
+    FILE(READ ${_in_FILE} _contents)
+    FILE(WRITE ${_out_FILE} "#undef UMBRELLO_VERSION\n")
+    STRING(REGEX REPLACE "\n" "" _contents "${_contents}" )
+    FILE(APPEND ${_out_FILE} "#define UMBRELLO_VERSION \"${_contents}\"")
+endmacro(CREATE_VERSION)
+
+macro_additional_clean_files( ${CMAKE_CURRENT_BINARY_DIR}/version.h )
+create_version(${CMAKE_SOURCE_DIR}/umbrello/VERSION version.h)
+
 add_subdirectory( classparser ) 
 add_subdirectory( dialogs ) 
 add_subdirectory( clipboard ) 
