--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -42,3 +42,4 @@ Comment[tg]=Файли моделкунонии UML Umbrello
 Comment[tr]=Umbrello UML Modelleyici Dosyası
 Comment[uk]=Файл моделювання UML Umbrello
 Comment[zh_CN]=Umbrello UML 建模工具文件
+Comment[zh_TW]=Umbrello UML Modeller 檔案
