--- a/umbrello/headings/CMakeLists.txt
+++ b/umbrello/headings/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 ########### install files ###############
 
-install_files( ${DATA_INSTALL_DIR}/umbrello/headings FILES heading.adb  heading.ads  heading.as  heading.cpp  heading.cs  heading.h  heading.idl  heading.java  heading.js  heading.php  heading.pm  heading.py  heading.rb  heading.sql  heading.xsd )
+install( FILES heading.adb  heading.ads  heading.as  heading.cpp  heading.cs  heading.h  heading.idl  heading.java  heading.js  heading.php  heading.pm  heading.py  heading.rb  heading.sql  heading.xsd  DESTINATION  ${DATA_INSTALL_DIR}/umbrello/headings )
 
 
 
