--- a/umbrello/codeimport/Makefile.am
+++ b/umbrello/codeimport/Makefile.am
@@ -1,4 +1,6 @@
-INCLUDES = -I../classparser $(all_includes)
+INCLUDES = -I./classparser $(all_includes)
 
 noinst_LTLIBRARIES = libcodeimport.la
 libcodeimport_la_SOURCES = adaimport.cpp classimport.cpp cppimport.cpp idlimport.cpp import_utils.cpp javaimport.cpp nativeimportbase.cpp pascalimport.cpp pythonimport.cpp
+
+SUBDIRS = classparser
