SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=566021

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -28,6 +28,7 @@ Comment[ja]=Umbrello UML モデラファイル
 Comment[nb]=Umbrello UML-modelleringsfil
 Comment[nds]=UML-Modellmaker-Datei vun Umbrello
 Comment[nl]=Umbrello UML Modeller-bestand
+Comment[nn]=Umbrello UML-modelleringsfil
 Comment[pl]=Plik modelera UML Umbrello
 Comment[pt]=Ficheiro do Modelador de UML Umbrello
 Comment[pt_BR]=Arquivo de Modelador UML Umbrello
