--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -30,6 +30,7 @@ GenericName[ja]=UML モデラ
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
 GenericName[nl]=UML-modeller
+GenericName[nn]=UML-modelleringsprogram
 GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
 GenericName[pt_BR]=Modelador UML
