Umbrello for KDE4 compiles and runs.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=566475

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -284,7 +284,7 @@ kde4_add_ui3_files( umbrello_SRCS
 
 kde4_add_executable(umbrello ${umbrello_SRCS})
 
-target_link_libraries(umbrello  ${KDE4_KIO_LIBS}  kdeprint  )
+target_link_libraries(umbrello  ${KDE4_KIO_LIBS}  kdeprint kde3support )
 
 install(TARGETS umbrello  DESTINATION ${BIN_INSTALL_DIR} )
 
