--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -1,6 +1,12 @@
 <!DOCTYPE kpartgui>
 <kpartgui name="umbrello" version="11">
 <MenuBar>
+  <Menu name="file"><text>&amp;File</text>
+      <Menu name="file_export"><text>&amp;Export</text>
+          <Action name="file_export_docbook"/>
+          <Action name="file_export_xhtml"/>
+      </Menu>
+  </Menu>
   <Menu name="edit"><text>&amp;Edit</text>
     <Action name="delete_selected"/>
   </Menu>
