--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -297,7 +297,7 @@ kde4_add_ui3_files( umbrello_SRCS
 
 kde4_add_executable(umbrello ${umbrello_SRCS})
 
-target_link_libraries(umbrello  ${KDE4_KIO_LIBS}  ${KDE4_KDEPRINT_LIBS} kde3support xml2 xslt)
+target_link_libraries(umbrello  ${KDE4_KIO_LIBS}  ${KDE4_KDEPRINT_LIBS} ${KDE4_KDE3SUPPORT_LIBS} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES})
 
 install(TARGETS umbrello  DESTINATION ${BIN_INSTALL_DIR} )
 
