--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -20,6 +20,7 @@ GenericName[el]=Μοντελοποιητής UML
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
 GenericName[eu]=UML modelatzailea
+GenericName[fa]=مدل‌ساز UML
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
 GenericName[ga]=Múnlóir UML
