New class UMLFolder gives folders a representation in the document. Change the document model to match the listview appearance: UMLDoc::m_objects is replaced by m_root, an array of modelviews with one element for each of the Logical, UseCase, Component, Deployment, and EntityRelationship models. This prepares for implementing the loading of Rose controlled units. Stuff known to need work: - Support for external folders is temporarily broken - On loading previous XMI files, the contents of user created folders   appear okay in the listview but are not located inside the proper   UMLFolder in the document - The Datatypes folder appears multiple times in the list view - Diagrams should appear in the XMI.extension of the respective UMLFolder CCBUG:87252 CCBUG:81364
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=575645

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -45,6 +45,7 @@ enumliteral.cpp \
 enumwidget.cpp \
 floatingtextwidget.cpp \
 floatingtextwidgetcontroller.cpp \
+folder.cpp \
 forkjoinwidget.cpp \
 kplayerslideraction.cpp \
 hierarchicalcodeblock.cpp \
@@ -106,6 +107,7 @@ umlviewimageexporterall.cpp \
 umlviewimageexportermodel.cpp \
 umlwidget.cpp \
 umlwidgetcontroller.cpp \
+uniqueid.cpp \
 usecase.cpp \
 usecasewidget.cpp \
 widgetbase.cpp \
