--- a/umbrello/docgenerators/Makefile.am
+++ b/umbrello/docgenerators/Makefile.am
@@ -1,13 +1,15 @@
-INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/umbrello -I$(top_srcdir)/umbrello/docgenerators -I../../../umbrello/umbrello -I/usr/include/libxml2 $(all_includes)
+INCLUDES = -I$(srcdir)/.. -I$(top_srcdir)/umbrello/docgenerators -I../../../umbrello/umbrello $(LIBXML_CFLAGS) $(all_includes)
 METASOURCES = AUTO
 bin_PROGRAMS = umbodoc
 
+AM_LDFLAGS = $(all_libraries)
 umbodoc_COMPILE_FIRST = version.h
 umbodoc_SOURCES = main.cpp
-umbodoc_LDADD = $(LIB_KDECORE) -lxslt -lxml2
+umbodoc_LDADD = $(LIB_KDECORE) $(LIBXSLT_LIBS) $(LIBXML_LIBS)
 lib_LTLIBRARIES = libdocgenerators.la
 noinst_HEADERS = docbookgenerator.h version.h
 libdocgenerators_la_SOURCES = docbookgenerator.h docbookgenerator.cpp xhtmlgenerator.cpp
+libdocgenerators_la_LIBADD = $(LIB_KDECORE) $(LIBXSLT_LIBS) $(LIBXML_LIBS)
 
 appdir=$(kde_datadir)/umbrello
 app_DATA = xmi2docbook.xsl docbook2xhtml.xsl xmi.css common.ent
