Remove the confusing UMLDoc::getCurrentView() method, class UMLApp is responsible for the current view. This addresses part of the PR: > 1. The distinction between UMLApp and UMLDoc is unclear. > For example, both UMLApp and UMLDoc have a method getCurrentView() > which however do not necessarily return the same object?! CCBUG:107347
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=577629

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -50,7 +50,6 @@ forkjoinwidget.cpp \
 kplayerslideraction.cpp \
 hierarchicalcodeblock.cpp \
 import_rose.cpp \
-infowidget.cpp \
 kstartuplogo.cpp \
 linepath.cpp \
 linkwidget.cpp \
@@ -111,6 +110,7 @@ uniqueid.cpp \
 usecase.cpp \
 usecasewidget.cpp \
 widgetbase.cpp \
+widget_factory.cpp \
 widget_utils.cpp \
 worktoolbar.cpp
 
