--- a/umbrello/docgenerators/Makefile.am
+++ b/umbrello/docgenerators/Makefile.am
@@ -6,7 +6,7 @@ AM_LDFLAGS = $(all_libraries)
 umbodoc_COMPILE_FIRST = version.h
 umbodoc_SOURCES = main.cpp
 umbodoc_LDADD = $(LIB_KDECORE) $(LIBXSLT_LIBS) $(LIBXML_LIBS)
-lib_LTLIBRARIES = libdocgenerators.la
+noinst_LTLIBRARIES = libdocgenerators.la
 noinst_HEADERS = docbookgenerator.h version.h
 libdocgenerators_la_SOURCES = docbookgenerator.h docbookgenerator.cpp xhtmlgenerator.cpp
 libdocgenerators_la_LIBADD = $(LIB_KDECORE) $(LIBXSLT_LIBS) $(LIBXML_LIBS)
