Port to uic4 Deprecated--
svn path=/trunk/KDE/kdesdk/umbrello/; revision=592725

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -292,10 +292,11 @@ kde4_add_ui3_files( umbrello_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/diagrampropertiespage.ui 
     ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/exportallviewsdialogbase.ui 
 	${CMAKE_CURRENT_SOURCE_DIR}/dialogs/umlrolepropertiesbase.ui 
-	${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/javacodegenerationformbase.ui
 	${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/cppcodegenerationformbase.ui
 	${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/rubycodegenerationformbase.ui
 )
+
+kde4_add_ui_files( umbrello_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/javacodegenerationformbase.ui)
 
 kde4_add_executable(umbrello ${umbrello_SRCS})
 
