Necessary to change KDE4_AUTOMOC macro to support enable-final argument
(there was not a dependancy between <name>_final.cpp file and
moc generated files => moc files were never created)

Not necessary to rebuild all kdelibs just cp kdelibs/cmake/modules/KDE4Macros.cmake <path_kde4>/share/apps/cmake/modules

I ported and tested all kde module (without enable-final argument, it compiles fines (test and program))
Don't try to use enable-final argument for the moment it doesn't compile (but dependancy works)

Regards

svn path=/trunk/KDE/kdesdk/umbrello/; revision=595047

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -281,7 +281,7 @@ set(umbrello_SRCS
    worktoolbar.cpp 
    )
 
-kde4_automoc(${umbrello_SRCS})
+kde4_automoc(umbrello ${umbrello_SRCS})
 
 kde4_add_ui3_files( umbrello_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/dialogs/codegenerationoptionsbase.ui 
