SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=596298

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -17,7 +17,7 @@ Comment[eo]=Dosiero de Umbrello UML-Modelilo
 Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
 Comment[eu]=Umbrello UML modelatzaile fitxategia
-Comment[fa]=پرونده مدل‌ساز Umbrello UML
+Comment[fa]=پروندۀ مدل‌ساز Umbrello UML
 Comment[fi]=Umbrello UML -mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
 Comment[ga]=Comhad le haghaidh an Mhúnlóra UML Umbrello
