Change the UniqueID::gen() function to return a random string of reasonable length instead of just a small integer. Addresses first part of Comment #1. CCBUG:126547
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=603735

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -136,7 +136,7 @@ INCLUDES= -Idialogs -Irefactoring $(all_includes)
 
 METASOURCES = AUTO
 
-umbrello_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic
+umbrello_LDFLAGS = $(all_libraries) -luuid $(KDE_RPATH) -export-dynamic
 
 messages: rc.cpp
 	$(PREPARETIPS) > tips.cpp
