SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=610389

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -28,6 +28,7 @@ GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラ
+GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
 GenericName[nl]=UML-modeller
