--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -26,6 +26,7 @@ Comment[hu]=Umbrello UML-fájl
 Comment[is]=Umbrello UML Modeller Skrá
 Comment[it]=File del modellatore UML Umbrello
 Comment[ja]=Umbrello UML モデラファイル
+Comment[ms]=Fail Pemodel Umbrello UML
 Comment[nb]=Umbrello UML-modelleringsfil
 Comment[nds]=UML-Modellmaker-Datei vun Umbrello
 Comment[nl]=Umbrello UML Modeller-bestand
