# Fix file copyrights
+ switching to the new undo / redo feature

+ cmd_create_umlobject

svn path=/branches/work/isi-umbrello/umbrello/; revision=613664

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -170,6 +170,8 @@ set(libcmds_SRCS
 	cmds/cmd_create_usecasediag.cpp
 
 	cmds/classdiag/cmd_create_class.cpp
+	
+	cmds/widgets/cmd_create_umlobject.cpp
 )
 
 ########### next target ###############
