SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=624050

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -9,6 +9,7 @@ Terminal=false
 Name=Umbrello
 Name[x-test]=xxUmbrelloxx
 GenericName=UML Modeller
+GenericName[el]=Μοντελοποιητής UML
 GenericName[fr]=Modeleur UML
 GenericName[x-test]=xxUML Modellerxx
 MimeType=application/x-uml
