--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -6,5 +6,6 @@ Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;*.xmi.tgz;*.xmi.tar.bz2;
 Comment=Umbrello UML Modeller File
+Comment[el]=Αρχείο μοντελοποιητή UML Umbrello
 Comment[fr]=Fichier du modeleur UML Umbrello
 Comment[x-test]=xxUmbrello UML Modeller Filexx
