Add files preconditionwidget (.h and .cpp) for drawing a precondition widget in a sequence diagram. A right mouse button click shows a menu where the user can choose the color, the font,...
svn path=/branches/work/isi-umbrello/umbrello/; revision=624671

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -309,6 +309,7 @@ set(libumbrello_SRCS
    petaltree2uml.cpp 
    plugin.cpp 
    pluginloader.cpp 
+   preconditionwidget.cpp
    seqlinewidget.cpp 
    statewidget.cpp 
    stereotype.cpp 
