SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=624850

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -8,6 +8,7 @@ DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
 Name[hi]=अम्बरैलो
+Name[pa]=ਉਮਬਰਿੱਲਓ
 Name[ta]=  அம்ரல்லோ
 GenericName=UML Modeller
 GenericName[bs]=UML modeler
