Undo / Redo Commit
Ajout de la commande undo/redo pour le déplacement d'un widget
=> A rajouter les commentaires plus tard :)

svn path=/branches/work/isi-umbrello/umbrello/; revision=625080

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -230,6 +230,8 @@ set(libcmds_SRCS
 	cmds/classdiag/cmd_create_class.cpp
 	
 	cmds/widgets/cmd_create_umlobject.cpp
+	cmds/cmd_moveWidget.cpp
+
 )
 kde4_automoc(${libclipboard_SRCS})
 ########### next target ###############
